# gnome-bulk-rename

./: .gitignore  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.ac  gnome-bulk-rename.desktop.in
gnome-bulk-rename/: EXIF.py  Makefile.am  check.py  collect.py  config.py  config.py.in  constants.py  gnome-bulk-rename.py  gnomebulkrenameapp.py  gtkutils.py  markup.py  preferences.py  preview.py  register.py  rename.py  sort.py  undo.py  utils.py
m4/: Makefile.am
po/: POTFILES.in  de.po
test/: Makefile.am  runtests.py.in  test_check.py  test_markup.py  test_rename.py
