gnome_bulk_renamedir = $(libdir)/gnome-bulk-rename/python/gnome-bulk-rename

gnome_bulk_rename_PYTHON = \
	__init__.py \
	check.py \
	collect.py \
	config.py \
	constants.py \
	gnomebulkrenameapp.py \
	gtkutils.py \
	markup.py \
	preferences.py \
	preview.py \
	register.py \
	rename.py \
	sort.py \
	undo.py

BUILT_SOURCES=config.py

clean-local:
	rm -rf *.pyc *.pyo